--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Brett Sanders - Engineering Leader & Full Stack Software Engineer</title>
+    <meta name="description" content="Brett Sanders - Technology leader with 15+ years of experience in financial sector. Expertise in full stack development, AWS, and team leadership." />
+    <meta name="keywords" content="Software Engineering Director, Full Stack Developer, AWS Certified, SAFe Agile, San Diego" />
+    
+    <!-- Open Graph / Social Media -->
+    <meta property="og:title" content="Brett Sanders - Engineering Leader & Full Stack Software Engineer" />
+    <meta property="og:description" content="Technology leader with 15+ years of experience in financial sector. Expertise in full stack development, AWS, and team leadership." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://brettsanders.me" />
+    
+    <!-- Add canonical URL -->
+    <link rel="canonical" href="https://brettsanders.me" />
   </head>
   <body>
     <div id="root"></div>
