--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <meta property="og:title" content="Brett Sanders - Engineering Leader & Full Stack Software Engineer" />
     <meta property="og:description" content="Technology leader with 15+ years of experience in financial sector. Expertise in full stack development, AWS, and team leadership." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://brettsanders.me" />
+    <meta property="og:url" content="https://brettsanders.dev" />
     
     <!-- Add canonical URL -->
-    <link rel="canonical" href="https://brettsanders.me" />
+    <link rel="canonical" href="https://brettsanders.dev" />
   </head>
   <body>
     <div id="root"></div>
