--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons8-code-ios-17-outlined-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons8-code-ios-17-outlined-16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brett Sanders - Engineering Leader & Full Stack Software Engineer</title>
     <meta name="description" content="Brett Sanders - Technology leader with 15+ years of experience in financial sector. Expertise in full stack development, AWS, and team leadership." />
