--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     
     <!-- Add canonical URL -->
     <link rel="canonical" href="https://brettsanders.dev" />
+    
+    <!-- Gradio Chatbot Script -->
+    <script
+      type="module"
+      src="https://gradio.s3-us-west-2.amazonaws.com/5.33.1/gradio.js"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
