--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
     <meta name="theme-color" content="#2563eb" />
     <meta name="msapplication-TileColor" content="#2563eb" />
     
+    <!-- Performance optimization hints -->
+    <link rel="dns-prefetch" href="//gradio.s3-us-west-2.amazonaws.com">
+    <link rel="preload" href="/me.jpeg" as="image" type="image/jpeg">
+    <link rel="modulepreload" href="/src/main.tsx">
+    <link rel="modulepreload" href="/src/App.tsx">
+    
     <!-- Structured Data -->
     <script type="application/ld+json">
     {
