Update index.html and BlogList component for clarity and SEO improvements
- Updated canonical URL comment in index.html to indicate it will be set by individual pages.
- Changed "Read more" link text in BlogList component to include the post title for better context and user engagement.

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
     <meta name="twitter:image" content="https://www.brettsanders.com/me.jpeg" />
     <meta name="twitter:image:alt" content="Brett Sanders - Engineering Leader & Full Stack Software Engineer" />
     
-    <!-- Canonical URL -->
-    <link rel="canonical" href="https://www.brettsanders.com" />
+    <!-- Canonical URL will be set by individual pages -->
     
     <!-- Additional SEO meta tags -->
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
