--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Canonical URL will be set by individual pages -->
     
     <!-- Additional SEO meta tags -->
-    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1" />
     <meta name="googlebot" content="index, follow" />
     <meta name="theme-color" content="#2563eb" />
     <meta name="msapplication-TileColor" content="#2563eb" />
